2002-05-07  Sam Steingold  <sds@gnu.org>

	* stream.d (ChannelStream_init): add an end_system_call() for
	each begin_system_call()

2002-05-06  Bruno Haible  <bruno@clisp.org>

	* misc.d (LISP-IMPLEMENTATION-VERSION): Use casts to 'unsigned int'
	to avoid gcc-3.1 warnings.
	* utils/comment5.d: Include <stdlib.h>, for exit().

2002-05-06  Sam Steingold  <sds@gnu.org>

	do not create unusable iconv encodings
	* stream.d (fehler_iconv_invalid_charset): removed
	(open_iconv): open the iconv conversion and signal all errors
	(check_charset): check whether the charset is valid
	(iconv_mblen, iconv_mbstowcs, iconv_wcslen, iconv_wcstombs)
	(iconv_range, ChannelStream_init): use open_iconv()
	* lispbibl.d (check_charset): declare
	* encoding.d (MAKE-ENCODING): check the iconv charset for
	validity before making the charset

2002-05-03  Sam Steingold  <sds@gnu.org>

	fixed bug #[ 550864 ]: cannot use RETURN-FROM in deep nesting
	[this bug was introduced by the 2001-06-25 patch]
	* compiler.lisp (note-far-used-block): propagate block to
	all the enclosing functions, not just the current one

2002-05-03  Sam Steingold  <sds@gnu.org>

	* makemake.in (XCFLAGS) [debug]: add -DDEBUG_OS_ERROR on all
	platforms, do not add it on win32 when not debugging
	also add -DDEBUG_SPVW -DSAFETY=3

2002-05-02  Sam Steingold  <sds@gnu.org>

	* io.d (read_token_1): permit input of multiply escaped illegal
	characters (bug fix)

2002-04-30  Sam Steingold  <sds@gnu.org>

	fixed bug #[ 550528 ]: misleading error converting UTF-7
	* stream.d (saving_errno, error_saving_errno): new macros
	(iconv_mblen, iconv_mbstowcs, iconv_wcslen, iconv_wcstombs)
	(iconv_range, create_input_pipe, create_output_pipe)
	(create_io_pipe): use them

2002-04-28  Bruno Haible  <bruno@clisp.org>

	Split autoconf/aclocal.m4 into pieces.
	* m4/general.m4: New file.
	* m4/proto.m4: New file.
	* m4/cc-gcc.m4: New file.
	* m4/c++.m4: New file.
	* m4/cc-ansi.m4: New file.
	* m4/cc-cppaux.m4: New file.
	* m4/cc-elif.m4: New file.