@@ -10027,8 +10027,10 @@ This step determines, how many SP-Entries the function needs at most.
                   (JMP ; (JMP label)
                     (note-label (second item))
                     (note-jmp))
-                  ((JMPIF JMPIF1 JMPIFNOT JMPIFNOT1 JMPIFBOUNDP) ; (JMP... label)
+                  ((JMPIF JMPIF1 JMPIFNOT JMPIFNOT1) ; (JMP... label)
                     (note-label (second item)))
+                  (JMPIFBOUNDP ; (JMPIFBOUNDP n label)
+                    (note-label (third item)))
                   ((JMPHASH JMPHASHV JMPTAIL) ; (JMPHASH.. n ht label . labels), (JMPTAIL m n label)
                     (dolist (label (cdddr item)) (note-label label))
                     (note-jmp))
@@ -10086,6 +10088,7 @@ This step determines, how many SP-Entries the function needs at most.
             (return-from SP-depth (spd max-depth-1 max-depth-2)))
           (let* ((unseen (pop unseen-label-alist))
                  (label (car unseen))) ; next label to track
+            (unless (symbolp label) (compiler-error 'SP-depth "BAD LABEL"))
             (setq depth (cdr unseen))
             (let ((h (assoc label seen-label-alist)))
               (unless (and h (spd<= depth (cdr h)))
